# qtpygraph

./: .buildinfo  .flake8  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  build.py  cSpell.json  commitlint.config.js  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox-.coverage.py310-pyqt5  tox-.coverage.py310-pyqt6  tox-.coverage.py310-pyside2  tox-.coverage.py310-pyside6  tox-.coverage.py38-pyqt5  tox-.coverage.py38-pyqt6  tox-.coverage.py38-pyside2  tox-.coverage.py38-pyside6  tox-.coverage.py39-pyqt5  tox-.coverage.py39-pyqt6  tox-.coverage.py39-pyside2  tox-.coverage.py39-pyside6  tox.ini  typos.toml
.ci/: copy-stubs-to-site-packages.ps1  copy-stubs-to-site-packages.sh
.cspell/: acronyms.txt  authors.txt  colormaps.txt  general_terms.txt  numpy.txt  placeholders.txt  programs.txt  pytest_fixtures.txt  python-packages.txt  qt.txt  thirdparty_libraries.txt  usernames.txt  vtk_constants.txt
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: docs.yml  release.yml  test.yml  test_and_deploy.yml
_pages/: contact.html  contributing.html  introduction.html
_sources/: index.rst
_sources/_pages/: contributing.rst  introduction.rst
docs/: Makefile  __init__.py
docs/source/: __init__.py  conf.py  index.rst
docs/source/_pages/: contact.rst  introduction.md
logs/: __init__.py
logs/coverage/: coverage.json
qtpygraph/: __init__.py  __main__.py
src/qtpygraph/: __init__.py  __main__.py  utilities.py
stubs/: replace_lines.py
stubs/PySide6-stubs/Qt3DAnimation/: _Qt3DAnimation.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/Qt3DCore/: _Qt3DCore.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/Qt3DExtras/: _Qt3DExtras.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/Qt3DInput/: _QIntList.pyi  _Qt3DInput.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/Qt3DLogic/: _Qt3DLogic.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/Qt3DRender/: _QIntList.pyi  _Qt3DRender.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/QtAxContainer/: _QAxBase.pyi  _QAxBaseObject.pyi  _QAxBaseWidget.pyi  _QAxObject.pyi  _QAxObjectInterface.pyi  _QAxScript.pyi  _QAxScriptEngine.pyi  _QAxScriptManager.pyi  _QAxSelect.pyi  _QAxWidget.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/QtBluetooth/: _QBluetooth.pyi  _QBluetoothAddress.pyi  _QBluetoothDeviceDiscoveryAgent.pyi  _QBluetoothDeviceInfo.pyi  _QBluetoothHostInfo.pyi  _QBluetoothLocalDevice.pyi  _QBluetoothServer.pyi  _QBluetoothServiceDiscoveryAgent.pyi  _QBluetoothServiceInfo.pyi  _QBluetoothSocket.pyi  _QBluetoothUuid.pyi  _QLowEnergyAdvertisingData.pyi  _QLowEnergyAdvertisingParameters.pyi  _QLowEnergyCharacteristic.pyi  _QLowEnergyCharacteristicData.pyi  _QLowEnergyConnectionParameters.pyi  _QLowEnergyController.pyi  _QLowEnergyDescriptor.pyi  _QLowEnergyDescriptorData.pyi  _QLowEnergyService.pyi  _QLowEnergyServiceData.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/QtCharts/: _QAbstractAxis.pyi  _QAbstractBarSeries.pyi  _QAbstractSeries.pyi  _QAreaLegendMarker.pyi  _QAreaSeries.pyi  _QBarCategoryAxis.pyi  _QBarLegendMarker.pyi  _QBarModelMapper.pyi  _QBarSeries.pyi  _QBarSet.pyi  _QBoxPlotLegendMarker.pyi  _QBoxPlotModelMapper.pyi  _QBoxPlotSeries.pyi  _QBoxSet.pyi  _QCandlestickLegendMarker.pyi  _QCandlestickModelMapper.pyi  _QCandlestickSeries.pyi  _QCandlestickSet.pyi  _QCategoryAxis.pyi  _QChart.pyi  _QChartView.pyi  _QDateTimeAxis.pyi  _QHBarModelMapper.pyi  _QHBoxPlotModelMapper.pyi  _QHCandlestickModelMapper.pyi  _QHPieModelMapper.pyi  _QHXYModelMapper.pyi  _QHorizontalBarSeries.pyi  _QHorizontalPercentBarSeries.pyi  _QHorizontalStackedBarSeries.pyi  _QIntList.pyi  _QLegend.pyi  _QLegendMarker.pyi  _QLineSeries.pyi  _QLogValueAxis.pyi  _QPercentBarSeries.pyi  _QPieLegendMarker.pyi  _QPieModelMapper.pyi  _QPieSeries.pyi  _QPieSlice.pyi  (+16 more)
stubs/PySide6-stubs/QtConcurrent/: _QFutureQString.pyi  _QFutureVoid.pyi  _QFutureWatcherQString.pyi  _QFutureWatcherVoid.pyi  _QtConcurrent.pyi  __init__.pyi  _functions.pyi
stubs/PySide6-stubs/QtCore/: _ClassInfo.pyi  _MetaFunction.pyi  _MetaSignal.pyi  _Property.pyi  _PyClassProperty.pyi  _QAbstractAnimation.pyi  _QAbstractEventDispatcher.pyi  _QAbstractItemModel.pyi  _QAbstractListModel.pyi  _QAbstractNativeEventFilter.pyi  _QAbstractProxyModel.pyi  _QAbstractTableModel.pyi  _QAnimationGroup.pyi  _QBasicMutex.pyi  _QBasicTimer.pyi  _QBitArray.pyi  _QBuffer.pyi  _QByteArray.pyi  _QByteArrayMatcher.pyi  _QCalendar.pyi  _QCborArray.pyi  _QCborError.pyi  _QCborKnownTags.pyi  _QCborMap.pyi  _QCborParserError.pyi  _QCborSimpleType.pyi  _QCborStreamReader.pyi  _QCborStreamWriter.pyi  _QCborStringResultByteArray.pyi  _QCborStringResultString.pyi  _QCborTag.pyi  _QCborValue.pyi  _QChildEvent.pyi  _QCollator.pyi  _QCollatorSortKey.pyi  _QCommandLineOption.pyi  _QCommandLineParser.pyi  _QConcatenateTablesProxyModel.pyi  _QCoreApplication.pyi  _QCryptographicHash.pyi  (+138 more)
stubs/PySide6-stubs/QtDataVisualization/: _Q3DBars.pyi  _Q3DCamera.pyi  _Q3DInputHandler.pyi  _Q3DLight.pyi  _Q3DObject.pyi  _Q3DScatter.pyi  _Q3DScene.pyi  _Q3DSurface.pyi  _Q3DTheme.pyi  _QAbstract3DAxis.pyi  _QAbstract3DGraph.pyi  _QAbstract3DInputHandler.pyi  _QAbstract3DSeries.pyi  _QAbstractDataProxy.pyi  _QBar3DSeries.pyi  _QBarDataItem.pyi  _QBarDataProxy.pyi  _QCategory3DAxis.pyi  _QCustom3DItem.pyi  _QCustom3DLabel.pyi  _QCustom3DVolume.pyi  _QHeightMapSurfaceDataProxy.pyi  _QItemModelBarDataProxy.pyi  _QItemModelScatterDataProxy.pyi  _QItemModelSurfaceDataProxy.pyi  _QLogValue3DAxisFormatter.pyi  _QScatter3DSeries.pyi  _QScatterDataItem.pyi  _QScatterDataProxy.pyi  _QSurface3DSeries.pyi  _QSurfaceDataItem.pyi  _QSurfaceDataProxy.pyi  __init__.pyi  (+4 more)
stubs/pytestqt-stubs/: __init__.pyi  exceptions.pyi  logging.pyi  modeltest.pyi  plugin.pyi  qt_compat.pyi  qtbot.pyi  utils.pyi  wait_signal.pyi
tests/: __init__.py  conftest.py
tests/doc_tests/: __init__.py  test_index_page.py
(+902 files in other folders)
