[metadata]
name = qtpygraph
version = attr: qtpygraph.__version__
description = A pythonic interface to the Qt Graphics View Framework using qtpy
long_description = file: README.rst
author = Adam Hendry
license = Apache-2.0
license_files = LICENSE
platforms = win32, osx, linux
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >= 3.8
zip_safe = false

[options.package_data]
qtpygraph = py.typed
